examples/typeError/typeErrorInCopatternFun3.lcp
Nat = Data(X)< Zero () | Succ X >
NatList = Record(X){ .head : Nat | .tail : X }

f : Nat
f () = f
